--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.proximax.app</groupId>
     <artifactId>vault</artifactId>
-    <version>0.5.1</version>
-    <!--version>2.0.1-SNAPSHOT</version-->
+    <version>0.6.0</version>
     <properties>
         <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss</maven.build.timestamp.format>
     </properties>
@@ -82,7 +81,12 @@
             </plugin>
         </plugins>
     </build>
-    <dependencies>        
+    <dependencies>  
+	<dependency>
+            <groupId>io.swagger</groupId>
+            <artifactId>swagger-annotations</artifactId>
+            <version>1.5.15</version>			
+        </dependency>
         <dependency>
             <groupId>com.madgag.spongycastle</groupId>
             <artifactId>prov</artifactId>
@@ -99,12 +103,33 @@
             <artifactId>vertx-rx-java2</artifactId>
             <version>3.5.0</version>
             <scope>compile</scope>
-        </dependency>        
+        </dependency>
+	<dependency>
+            <groupId>org.threeten</groupId>
+            <artifactId>threetenbp</artifactId>
+            <version>1.4.0</version>
+            <scope>compile</scope>
+        </dependency>
+	<dependency>
+            <groupId>io.proximax</groupId>
+            <artifactId>java-xpx-chain-sdk</artifactId>
+            <version>0.6.0</version>
+        </dependency>
         <dependency>
             <groupId>io.proximax</groupId>
             <artifactId>java-chain-xipfs-sdk</artifactId>
-            <version>0.5.0</version>
-        </dependency>        
+            <version>0.6.0</version>
+        </dependency>
+	<dependency>
+            <groupId>io.proximax</groupId>
+            <artifactId>java-xpx-ipfs-api</artifactId>
+            <version>0.4.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpmime</artifactId>
+            <version>4.5.9</version>
+        </dependency>
         <dependency>
             <groupId>com.jfoenix</groupId>
             <artifactId>jfoenix</artifactId>
